--- a/src/components/ShowsList/ShowsList.css
+++ b/src/components/ShowsList/ShowsList.css
@@ -1,7 +1,12 @@
+.container {
+}
+
 .showsList {
-    display: flex;
+    display: inline-flex;
     flex-flow: row wrap;
     font-size: 10px;
+    margin: 0 auto;
+    padding: 10px;    
 }
 
 .card {
@@ -25,4 +30,8 @@
     padding: 0;
     line-height: 1;
     font-weight: normal;
+}
+
+.error {
+    font-size: 24px;
 }
