--- a/src/components/ShowsList/ShowsList.css
+++ b/src/components/ShowsList/ShowsList.css
@@ -6,11 +6,14 @@
     flex-flow: row wrap;
     font-size: 10px;
     margin: 0 auto;
-    padding: 10px;    
+    padding: 10px;
 }
 
 .card {
     margin: 10px;
+    cursor: pointer;
+    color: #333;
+    text-decoration: none;
 }
 
 .thumbnail {
@@ -34,4 +37,11 @@
 
 .error {
     font-size: 24px;
+}
+
+.errorToast {
+    position: relative;
+    width: 50%;
+    border: 1px solid #ccc;
+    font-size: 14px;
 }
