--- a/src/components/ShowsList/ShowsList.css
+++ b/src/components/ShowsList/ShowsList.css
@@ -1,12 +1,10 @@
-.container {
-}
-
 .showsList {
     display: inline-flex;
     flex-flow: row wrap;
     font-size: 10px;
     margin: 0 auto;
     padding: 10px;
+    width: 100%;
 }
 
 .card {
@@ -40,8 +38,15 @@
 }
 
 .errorToast {
-    position: relative;
-    width: 50%;
-    border: 1px solid #ccc;
+    position: absolute;
+    width: 500px;
+    border: 1px solid #333;
     font-size: 14px;
+    text-align: center;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.9);
+    top: 200px;
+    left: calc(50% - 250px);
+    font-weight: bold;
 }
